--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -19,6 +19,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt install -y xvfb x11-utils libxkbcommon-x11-0
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-cov pytest-qt setuptools wheel numpy
     - name: Install package
@@ -31,5 +32,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+        QT_DEBUG_PLUGINS: 1
       run: |
-        pytest --cov=pymodaq --cov-report=xml --cov-report=html tests/
+        sudo catchsegv xvfb-run --auto-servernum `which coverage` run -m pytest --cov=pymodaq --cov-report=xml --cov-report=html tests/
