--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        sudo apt install -y xvfb x11-utils libxkbcommon-x11-0
+        sudo apt install libxkbcommon-x11-0
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-cov pytest-qt setuptools wheel numpy
     - name: Install package
